--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
   Test::More: 0
 distribution_type: module
 generated_by: 'Module::Install version 0.76'
-license: unknown
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -21,4 +21,6 @@ requires:
   Class::Accessor::Fast: 0
   Module::Load: 0
   Params::Validate: 0
-version: 1.93
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.95
