Import of GUGU/Algorithm-FloodControl-v1.97 from CPAN.
gitpan-cpan-distribution: Algorithm-FloodControl
gitpan-cpan-version:      v1.97
gitpan-cpan-path:         GUGU/Algorithm-FloodControl-v1.97.tar.gz
gitpan-cpan-author:       GUGU
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
   File::Temp: 0
   Test::More: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.76'
+generated_by: 'Module::Install version 0.77'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,8 +19,11 @@ no_index:
     - t
 requires:
   Class::Accessor::Fast: 0
+  Module::Install: 0.77
   Module::Load: 0
   Params::Validate: 0
+  perl: 5.8.0
+  version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.96
+version: 1.097000
